--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <h1 class="text-2xl font-bold"><a href="/"><img src="https://www.osohq.com/docs/logo-bear-white.png" class="inline h-[1em] mr-1"> A Tour of Polar</a></h1>
       </div>
       <div class="flex items-center">
-        <button onclick="toggleDarkMode()" class="p-2 mr-2">
+        <button onclick="toggleDarkMode()" class="p-2 mr-2 rounded-lg hover:bg-indigo-700 dark:bg-indigo-800">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
           </svg>
