--- a/public/list.html
+++ b/public/list.html
@@ -44,7 +44,10 @@
 
       <div class="flex flex-col gap-8 mt-4 mb-12">
         <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Basics</div>
+          <div class="text-xl font-bold flex flex-col items-center gap-4">
+            <div class="text-xl">Basics</div>
+            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/657b69aa1d2f9b415a0207ce_Oso_Webflow.png" alt="Basics illustration" class="rounded-md h-32">
+          </div>
 
           <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
             <div class="min-w-0 flex-1">
@@ -66,7 +69,10 @@
         </div>
 
         <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Role-Based Access Control (RBAC)</div>
+          <div class="text-xl font-bold flex flex-col items-center gap-4">
+            <div class="text-xl">Role-Based Access Control (RBAC)</div>
+            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/64ed120c8334a57ea0cc13c0_RBAC_SirMixALot.png" alt="RBAC illustration" class="rounded-md h-32">
+          </div>
 
           <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
             <div class="min-w-0 flex-1">
@@ -133,7 +139,10 @@
         </div>
 
         <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Relationship-Based Access Control (ReBAC)</div>
+          <div class="text-xl font-bold flex flex-col items-center gap-4">
+            <div class="text-xl">Relationship-Based Access Control (ReBAC)</div>
+            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/65aa92c45442d6570a3837e8_Group%20163%20(1).png" alt="ReBAC illustration" class="rounded-md h-32">
+          </div>
 
           <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
             <div class="min-w-0 flex-1">
@@ -182,7 +191,10 @@
         </div>
 
         <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Attribute-Based Access Control (ABAC)</div>
+          <div class="text-xl font-bold flex flex-col items-center gap-4">
+            <div class="text-xl">Attribute-Based Access Control (ABAC)</div>
+            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6537e31163c7ec0b082fdcae_Knitting%20Bear.png" alt="ABAC illustration" class="rounded-md h-32">
+          </div>
 
           <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
             <div class="min-w-0 flex-1">
@@ -231,7 +243,10 @@
         </div>
 
         <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold">Wrapping Up</div>
+          <div class="text-xl font-bold flex flex-col items-center gap-4">
+            <div class="text-xl">Wrapping Up</div>
+            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/65305580ea8b0ee5c729a6c9_IMG_3268%201.png" alt="Wrapping Up illustration" class="rounded-md h-32">
+          </div>
 
           <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
             <div class="min-w-0 flex-1">
