--- a/public/list.html
+++ b/public/list.html
@@ -38,225 +38,12 @@
     </header>
 
     <div class="max-w-7xl w-full mx-auto">
-      <div class="pt-4">
+      <div class="pt-4 w-full text-center">
         <h2 class="text-2xl font-bold">Welcome to a Tour of Polar</h2>
       </div>
 
-      <div class="flex flex-col gap-8 mt-4 mb-12">
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold flex flex-col items-center gap-4">
-            <div class="text-xl">Basics</div>
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/657b69aa1d2f9b415a0207ce_Oso_Webflow.png" alt="Basics illustration" class="rounded-md h-32">
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/basics/1" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Hello, World</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to use this tour</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/basics/2" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Basic Rules</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to write simple rules and permissions in Polar</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold flex flex-col items-center gap-4">
-            <div class="text-xl">Role-Based Access Control (RBAC)</div>
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/64ed120c8334a57ea0cc13c0_RBAC_SirMixALot.png" alt="RBAC illustration" class="rounded-md h-32">
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/1" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Multitenant Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to use roles to simplify your authorization logic</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/2" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Resource-Specific Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement fine-grained access control with resource-specific roles</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/3" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Global Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement global roles that span your entire application</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/4" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Inheriting Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to inherit roles between related resources</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/5" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Resource Ownership</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to grant additional permissions to resource owners</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/6" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Resource Sharing</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to share resources and control access at a granular level</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rbac/7" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Custom Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement flexible custom roles for different organization needs</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold flex flex-col items-center gap-4">
-            <div class="text-xl">Relationship-Based Access Control (ReBAC)</div>
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/65aa92c45442d6570a3837e8_Group%20163%20(1).png" alt="ReBAC illustration" class="rounded-md h-32">
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rebac/1" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Relationship-Based Access Control (ReBAC)</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to organize permissions based on relationships between resources</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rebac/2" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Files & Folders</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement hierarchical file/folder permissions</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rebac/3" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">User-Resource Relationships</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how relationships between users and resources affect permissions</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rebac/4" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Impersonation</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement user impersonation for support and admin scenarios</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/rebac/5" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Organization Hierarchies</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement authorization based on organizational reporting structures</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold flex flex-col items-center gap-4">
-            <div class="text-xl">Attribute-Based Access Control (ABAC)</div>
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6537e31163c7ec0b082fdcae_Knitting%20Bear.png" alt="ABAC illustration" class="rounded-md h-32">
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/abac/1" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Public/Private Resources</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how attributes and characteristics of resources control access to them</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/abac/2" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Conditional Roles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement conditional roles based on organization preferences</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/abac/3" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Role Toggles</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement toggles and switches to control access</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/abac/4" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Time-Based Checks</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement access controls that expire after a period of time</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/abac/5" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Entitlements</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn how to implement subscription-based access control with entitlements and quotas</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-4">
-          <div class="text-xl font-bold flex flex-col items-center gap-4">
-            <div class="text-xl">Wrapping Up</div>
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/65305580ea8b0ee5c729a6c9_IMG_3268%201.png" alt="Wrapping Up illustration" class="rounded-md h-32">
-          </div>
-
-          <div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
-            <div class="min-w-0 flex-1">
-              <a href="/wrapping-up/1" class="focus:outline-none">
-                <p class="font-medium text-gray-900 dark:text-white">Wrapping Up</p>
-                <p class="truncate text-sm text-gray-500 dark:text-gray-400">Learn where to go next in your authorization journey</p>
-              </a>
-            </div>
-          </div>
-        </div>
+      <div class="flex flex-col gap-8 mt-4 mb-12" id="container">
+        <!-- This is where the content will be dynamically inserted -->
       </div>
     </div>
 
@@ -267,6 +54,32 @@
 function toggleDarkMode() {
   document.documentElement.classList.toggle('dark');
   localStorage.setItem('darkMode', document.documentElement.classList.contains('dark'));
+}
+
+const container = document.querySelector('#container');
+
+for (const [chapter, sections] of Object.entries(content)) {
+  const sectionsHTML = sections.map((section, index) => `
+<div class="p-2 relative flex items-center space-x-3 rounded-lg border border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:border-gray-400">
+  <div class="min-w-0 flex-1">
+    <a href="/${chapterSlugs[chapter]}/${index + 1}" class="focus:outline-none">
+      <p class="font-medium text-gray-900 dark:text-white">${section.title}</p>
+      <p class="truncate text-sm text-gray-500 dark:text-gray-400">${section.description}</p>
+    </a>
+  </div>
+</div>
+  `.trim()).join('\n\n');
+
+  container.innerHTML += '\n\n' + `
+<div class="flex flex-col gap-4">
+  <div class="text-xl font-bold flex flex-col items-center gap-4">
+    <div class="text-xl">${chapter}</div>
+    <img src="${chapterImages[chapter]}" alt="${chapter} illustration" class="rounded-md h-32">
+  </div>
+
+  ${sectionsHTML}
+</div>
+  `.trim();
 }
 </script>
 
