make left div full screen height to avoid vertical drag bar going off the screen

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
       </div>
     </header>
     <div class="flex flex-1 w-screen">
-      <div class="w-1/2 relative border-r border-gray-100 p-4 flex flex-col gap-6 dark:border-gray-700">
+      <div class="w-1/2 relative border-r border-gray-100 p-4 flex flex-col gap-6 dark:border-gray-700 h-[calc(100vh-48px)] overflow-y-auto">
         <div id="pageContent" class="flex-grow dark:text-gray-300"></div>
         <div class="w-full flex flex-col gap-2">
           <div class="flex gap-4 items-center">
