correct tracking for run code

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@ async function runCode() {
   track('RUN_CODE', {
     currentChapter,
     currentPage,
-    result,
+    success,
     error
   });
 }
