--- a/public/list.html
+++ b/public/list.html
@@ -2,6 +2,14 @@
 <html lang="en" class="dark:bg-gray-900">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MK29QFG');</script>
+  <!-- End Google Tag Manager -->
+
   <!-- favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.prod.website-files.com/5f148310b9588c295ed77f20/6222613fc7d2ef9b8b5312f8_logo-black.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.prod.website-files.com/5f148310b9588c295ed77f20/6222613fc7d2ef9b8b5312f8_logo-black.png">
@@ -19,6 +27,10 @@
 </head>
 
 <body class="dark:bg-gray-900 dark:text-white">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MK29QFG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <div class="flex flex-col h-screen w-screen">
     <header class="bg-indigo-600 text-white flex justify-between">
